<resources>
    <string name="app_name">EzJobAgency</string>

    <string name="it">IT Industry</string>
    <string name="construction">Construction Industry</string>
    <string name="education">Education Industry</string>
    <string name="entertainment">Entertainment Industry</string>
    <string name="finance">Finance Industry</string>
    <string name="fnb">F&amp;B Industry</string>

    <string name="wesley"><b>Name:</b> Wesley Chiau Yan Jun</string>
    <string name="mengrong"><b>Name:</b> Gian Meng Rong</string>
    <string name="lynette"><b>Name:</b> Lynette Lim Xinyu</string>
    <string name="minyao"><b>Name:</b> Phua Min Yao</string>
    <string name="keefe"><b>Name:</b> Keefe Christian Lee Kit Onn</string>
    <string name="jon"><b>Name:</b> Jon Tan Jun Ting</string>

    <string name="wesley_number"><b>Phone Number:</b> 9123 4567</string>
    <string name="mengrong_number"><b>Phone Number:</b> 9234 5678</string>
    <string name="lynette_number"><b>Phone Number:</b> 9345 6789</string>
    <string name="minyao_number"><b>Phone Number:</b> 9456 7890</string>
    <string name="keefe_number"><b>Phone Number:</b> 9567 8901</string>
    <string name="jon_number"><b>Phone Number:</b> 9678 9012</string>

    <string name="wesley_email"><b>Email:</b> wesley@email.com</string>
    <string name="mengrong_email"><b>Email:</b> mengrong@email.com</string>
    <string name="lynette_email"><b>Email:</b> lynette@email.com</string>
    <string name="minyao_email"><b>Email:</b> minyao@email.com</string>
    <string name="keefe_email"><b>Email:</b> keefe@email.com</string>
    <string name="jon_email"><b>Email:</b> jon@email.com</string>

    <string name="wesley_it">Wesley from Apple</string>
    <string name="mengrong_it">Meng Rong from Microsoft</string>
    <string name="lynette_it">Lynette from Amazon</string>
    <string name="minyao_it">Min Yao from Google</string>
    <string name="keefe_it">Keefe from Meta</string>
    <string name="jon_it">Jon from Twitter</string>

    <string name="wesley_construction">Wesley from Bechtel Corporation</string>
    <string name="mengrong_construction">Meng Rong from Fluor Corporation</string>
    <string name="lynette_construction">Lynette from Whiting-Turner</string>
    <string name="minyao_construction">Min Yao from EMCOR</string>
    <string name="keefe_construction">Keefe from Turner Construction</string>
    <string name="jon_construction">Jon from DPR Construction</string>

    <string name="wesley_education">Wesley from MOE</string>
    <string name="mengrong_education">Meng Rong from Duolingo</string>
    <string name="lynette_education">Lynette from Pearson</string>
    <string name="minyao_education">Min Yao from Coursera</string>
    <string name="keefe_education">Keefe from Kahoot!</string>
    <string name="jon_education">Jon from Udemy</string>

    <string name="wesley_entertainment">Wesley from Netflix</string>
    <string name="mengrong_entertainment">Meng Rong from Disney+</string>
    <string name="lynette_entertainment">Lynette from HBO</string>
    <string name="minyao_entertainment">Min Yao from YouTube</string>
    <string name="keefe_entertainment">Keefe from Twitch</string>
    <string name="jon_entertainment">Jon from Hulu</string>

    <string name="wesley_finance">Wesley from Bank of China</string>
    <string name="mengrong_finance">Meng Rong from DBS</string>
    <string name="lynette_finance">Lynette from UOB</string>
    <string name="minyao_finance">Min Yao from Goldman Sachs</string>
    <string name="keefe_finance">Keefe from JPMorgan</string>
    <string name="jon_finance">Jon from Berkshire Hathaway</string>

    <string name="wesley_fnb">Wesley from Nestle</string>
    <string name="mengrong_fnb">Meng Rong from PepsiCo</string>
    <string name="lynette_fnb">Lynette from Heinz</string>
    <string name="minyao_fnb">Min Yao from Dole</string>
    <string name="keefe_fnb">Keefe from Asahi Group</string>
    <string name="jon_fnb">Jon from Kelloggs</string>

    <string name="it_info"><b>Job Description:</b>
        Information technology (IT) is one of the world\'s fastest-growing industries and offers various opportunities for advancement and high-paying jobs. Skilled IT workers find work in nearly every industry, giving you the option to pursue a position in an industry you’re most interested in. Understanding the different roles and qualifications within IT can help you plan your next steps to find a position that suits you. </string>

    <string name="construction_info"><b>Job Description:</b>
        Construction is a general term meaning the art and science to form objects, systems, or organizations. Construction is an industry that includes the erection, maintenance, and repair of buildings and other immobile structures, and the building of roads and service facilities that become integral parts of structures and are essential to their use. In its most widely used context, construction covers the processes involved in delivering buildings, infrastructure and industrial facilities, and associated activities through to the end of their life. Construction includes structural additions and alterations but excludes the building of mobile structures such as trailers and ships. It typically starts with planning, financing, design, execution, builds, and also covers repairs and maintenance and improvement work.</string>

    <string name="education_info"><b>Job Description:</b>
        The education industry is expanding rapidly and its many businesses are eager for new talent, including experienced professionals and enthusiastic individuals just entering the workforce. The education industry can be described as the collection of organizations and businesses that provide products and services aimed at enhancing the quality of education in society. The education industry consists of schools, colleges, universities, and various private institutions. The education industry provides its students with the knowledge and skills to adapt to a continually changing working world. </string>

    <string name="entertainment_info"><b>Job Description:</b>
        The media and entertainment industry is an enormous consumer powerhouse, with revenues amounting to about $2 trillion worldwide. More than a third of the industry\'s business originates from the media and entertainment companies in the United States. While business is booming and expanding into new sectors, there are some warning signs to look out for.</string>

    <string name="finance_info"><b>Job Description:</b>
        The finance industry provides financial services to individuals and also businesses. This economy sector is made up of a variety of financial firms such as banks, investment houses, lenders, finance companies, real estate brokers, and also insurance companies.</string>

    <string name="fnb_info"><b>Job Description:</b>
        The food and beverage industry includes restaurants, cafeterias, cafés, fast-food joints, pubs, delis, food manufacturing operations, catering businesses, food transportation services, and more. Work in this industry can range from packaging to preparing, transporting, and serving food or beverages. Packaging is often shift-work based in factories. Like other manufacturing work, it can involve physical labour, as well as working with machinery. You\'ll be asked to follow specific food safety and sanititation guidelines.</string>

    <string name="accessibility_service_label">EzJobAgency - Connect to Job Database</string>
    <string name="accessibility_service_description">This accessibility service updates job listing by requesting data from the server each day.</string>

    <!--Example string-->
    <string name="IT_industry">Information technology (IT) is one of the world\'s fastest-growing industries and offers various opportunities for advancement and high-paying jobs. Skilled IT workers find work in nearly every industry, giving you the option to pursue a position in an industry you’re most interested in. Understanding the different roles and qualifications within IT can help you plan your next steps to find a position that suits you. </string>
</resources>